--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 </head>
 <body>
 <div class="container">
-    <div class="centerilized__wrapper">
     <div class="wrapper">
-        <div class="wrapper__img">
-            <img src="images/image-qr-code.png" alt="QR Code" class="qr__img">
+        <div class="qr_image">
+            <img src="images/image-qr-code.png" alt="QR Code To Scan" class="qr__img">
         </div>
-        <div class="wrapper__texts">
-            <h1 class="wrapper__title">Improve your front-end skills by building projects</h1>
-            <p class="wrapper__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <div class="qr__content">
+            <h1 class="qr__title">Improve your front-end skills by building projects</h1>
+            <p class="qr__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
-    </div>
     </div>
 </div>
 </body>
